--- a/user login mini project 2 part -16/index.html
+++ b/user login mini project 2 part -16/index.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/signup" method="POST">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="SignUp" >
-    </form>
+    Hello User
 </body>
 </html>
