--- a/user login mini project 2 part -16/login.html
+++ b/user login mini project 2 part -16/login.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form action="/login" method="POST">
-    <input type="text" name="username" id="username" placeholder="Username">
-    <input type="password" name="password" id="password" placeholder="Password">
-    <input type="submit" value="Login"/>
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <input type="submit" value="Login" >
     </form>
 </body>
 </html>
