--- a/user login mini project 2 part -16/refer/login.html
+++ b/user login mini project 2 part -16/refer/login.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/signup" method="POST">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="SignUp" >
+    <form action="/login" method="POST">
+    <input type="text" name="username" id="username" placeholder="Username">
+    <input type="password" name="password" id="password" placeholder="Password">
+    <input type="submit" value="Login"/>
     </form>
 </body>
 </html>
