--- a/user login mini project 2 part -16/refer/signup.html
+++ b/user login mini project 2 part -16/refer/signup.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form action="/signup" method="POST">
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <input type="submit" value="SignUp" >
+    <input type="text" name="username" id="username" placeholder="Username">
+    <input type="password" name="password" id="password" placeholder="Password">
+    <input type="submit" value="Sign Up"/>
     </form>
 </body>
 </html>
