--- a/boss level project part 1/index.html
+++ b/boss level project part 1/index.html
@@ -17,14 +17,17 @@
         <div class="logo">
           <h1>Sanjay</h1>
         </div>
-        <div class="nav-bar">
+     
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <div class="navbar">
+
+              <li><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </div>
           </ul>
-        </div>
+        
         <i class="fa-solid fa-bars"></i>
       </nav>
     </header>
